--- a/speech_recognition_msgs/CMakeLists.txt
+++ b/speech_recognition_msgs/CMakeLists.txt
@@ -11,6 +11,7 @@ add_message_files(
   Grammar.msg
   PhraseRule.msg
   SpeechRecognitionCandidates.msg
+  SpeechRecognitionCandidatesStamped.msg
   Vocabulary.msg
 )
 
